k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: swdt-svc
  labels:
    app.k8s.io/name: swdt
spec:
  ports:
  - name: 2010-5461
    port: 2010
    protocol: TCP
    targetPort: 5461
  selector:
    app.k8s.io/name: swdt
  type: LoadBalancer
