k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: swdt-ingress
spec:
  rules:
  - host:
    http:
      paths:
      - backend:
          service:
            name: swdt-svc
            port:
              number: 2010
        path: /
        pathType: Prefix
